test/log/arithmetic/vwmul_vv_u16_m.txt
vwmul_vv_u16_m.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwmul_vv_u16_m.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwmul_vv_u16_m.c:31:6: warning: no previous prototype for 'vwmul_vv_u16_m_golden' [-Wmissing-prototypes]
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vwmul_vv_u16_m.c: In function 'vwmul_vv_u16_m_golden':
vwmul_vv_u16_m.c:33:25: error: 'TODO' undeclared (first use in this function)
   33 |         exp_result[i] = TODO;
      |                         ^~~~
vwmul_vv_u16_m.c:33:25: note: each undeclared identifier is reported only once for each function it appears in
vwmul_vv_u16_m.c:31:38: warning: unused parameter 'mask' [-Wunused-parameter]
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |                            ~~~~~~~~~~^~~~
vwmul_vv_u16_m.c:31:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |                                           ~~~~~~~~~^~~~~~~~~~~~~~
vwmul_vv_u16_m.c:31:77: warning: unused parameter 'a' [-Wunused-parameter]
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |                                                                   ~~~~~~~~~~^
vwmul_vv_u16_m.c:31:89: warning: unused parameter 'b' [-Wunused-parameter]
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |                                                                               ~~~~~~~~~~^
vwmul_vv_u16_m.c: In function 'main':
vwmul_vv_u16_m.c:53:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   53 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vwmul_vv_u16_m.c:59:60: warning: passing argument 5 of 'vwmul_vv_u16_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   59 |     vwmul_vv_u16_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |                                                            ^~~~~~~~~~
      |                                                            |
      |                                                            uint32_t (*)[16] {aka long unsigned int (*)[16]}
vwmul_vv_u16_m.c:31:100: note: expected 'uint32_t (*)[32]' {aka 'long unsigned int (*)[32]'} but argument is of type 'uint32_t (*)[16]' {aka 'long unsigned int (*)[16]'}
   31 | void vwmul_vv_u16_m_golden(uint64_t *mask,uint32_t maskoff[2][16],uint16_t *a,uint16_t *b,uint32_t exp_result[][ELE_NUM]) {
      |                                                                                           ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vwmul_vv_u16_m.c:66:35: error: subscripted value is neither array nor pointer nor vector
   66 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwmul_vv_u16_m.c:67:79: error: subscripted value is neither array nor pointer nor vector
   67 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwmul_vv_u16_m.c:50:19: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   50 |     uint32x16x2_t result = {0};
      |                   ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwmul_vv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwmul_vv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed